[project]
name = "comfyui_sunoise"
description = "Scaled Uniform Noise for Ancestral & Stochastic samplers and Noisy latent image"
version = "2.0.0"
license = { text = "GNU General Public License v3.0" }

[project.urls]
Repository = "https://github.com/bvhari/ComfyUI_SUNoise"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bvhari"
DisplayName = "ComfyUI_SUNoise"
Icon = ""
